--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "~4.16.1",
     "express-session": "^1.16.2",
     "http-errors": "~1.6.3",
+    "material-design-icons": "^3.0.1",
     "mongoose": "^5.6.10",
     "morgan": "~1.9.1",
     "passport": "^0.4.0",
