--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express-session": "^1.16.2",
     "http-errors": "~1.6.3",
     "material-design-icons": "^3.0.1",
+    "method-override": "^3.0.0",
     "mongoose": "^5.6.10",
     "morgan": "~1.9.1",
     "passport": "^0.4.0",
